CSS "content" property is missing in getComputedStyles https://bugs.webkit.org/show_bug.cgi?id=147255

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-07-24
Reviewed by Simon Fraser.

Source/WebCore:

* css/CSSComputedStyleDeclaration.cpp:

LayoutTests:

* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* fast/css/getComputedStyle/resources/property-names.js:
* svg/css/getComputedStyle-basic-expected.txt:

Canonical link: https://commits.webkit.org/165346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187344 268f45cc-cd09-0410-ab3c-d52691b4dbfc